--- a/src/main/resources/site/pages/default/default.html
+++ b/src/main/resources/site/pages/default/default.html
@@ -1,173 +1,196 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title data-th-text="${pageTitle}">Home | My Corporation</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/bootstrap.css'})}" href="/assets/css/bootstrap.css"/>
-    <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/font-awesome.min.css'})}" href="/assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/sl-slide.css'})}" href="/assets/css/sl-slide.css" />
+    <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/bootstrap.css'})}"
+        href="/assets/css/bootstrap.css" />
+    <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/font-awesome.min.css'})}"
+        href="/assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/sl-slide.css'})}"
+        href="/assets/css/sl-slide.css" />
     <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/main.css'})}" href="/assets/css/main.css" />
-    <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/override.css'})}"/>
-    <script data-th-src="${portal.assetUrl({'_path=js/vendor/modernizr-2.6.2-respond-1.1.0.min.js'})}" src="/assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <link rel="stylesheet" data-th-href="${portal.assetUrl({'_path=css/override.css'})}" />
+    <script data-th-src="${portal.assetUrl({'_path=js/vendor/modernizr-2.6.2-respond-1.1.0.min.js'})}"
+        src="/assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
+
 <body>
 
-<!-- Page header and menu -->
-<header class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <div class="container">
-            <a class="navbar-brand" href="/" data-th-href="${siteUrl}">
-                <img data-th-src="${logo}" alt=""/>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#corporate-collapsed-menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <!-- Page header and menu -->
+    <header class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="container">
+                <a class="navbar-brand" href="/" data-th-href="${siteUrl}">
+                    <img data-th-src="${logo}" alt="" />
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#corporate-collapsed-menu" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
         </div>
-    </div>
 
-    <nav class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/" data-th-href="${siteUrl}">Home</a>
-            </li>
-            <li data-th-each="menuItem : ${menuItems}"
-                data-th-class="${'nav-item' +
+        <nav class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/" data-th-href="${siteUrl}">Home</a>
+                </li>
+                <li data-th-each="menuItem : ${menuItems}"
+                    data-th-class="${'nav-item' +
                                         (menuItem.hasChildren ? ' dropdown' : '') +
                                         (menuItem.inPath ? ' in-path' : '') +
                                         (menuItem.isActive ? ' active' : '')
                                         }">
-                <a href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                   data-th-href="${portal.pageUrl({'_path=' + menuItem.path})}"
-                   data-th-target="${menuItem.newWindow ? '_blank' : ''}"
-                   data-th-class="${'nav-link' + (menuItem.hasChildren ? ' dropdown-toggle' : '')}"
-                   data-th-attr="data-toggle=${menuItem.hasChildren ? 'dropdown' : ''}"
-                ><span data-th-text="${menuItem.menuName} ?: ${menuItem.displayName}" data-th-remove="tag">Page</span></a>
-                <div data-th-if="${menuItem.hasChildren}" class="dropdown-menu">
-                    <a data-th-each="submenuItem : ${menuItem.children}"
-                       href="#" class="dropdown-item" data-th-href="${portal.pageUrl({'_path=' + submenuItem.path})}"
-                       data-th-text="${submenuItem.menuName} ?: ${submenuItem.displayName}"
-                       data-th-target="${submenuItem.newWindow ? '_blank' : ''}">Page title</a>
-                </div>
-            </li>
-        </ul>
-    </nav>
-</header>
+                    <a href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                        data-th-href="${portal.pageUrl({'_path=' + menuItem.path})}"
+                        data-th-target="${menuItem.newWindow ? '_blank' : ''}"
+                        data-th-class="${'nav-link' + (menuItem.hasChildren ? ' dropdown-toggle' : '')}"
+                        data-th-attr="data-toggle=${menuItem.hasChildren ? 'dropdown' : ''}"><span
+                            data-th-text="${menuItem.menuName} ?: ${menuItem.displayName}"
+                            data-th-remove="tag">Page</span></a>
+                    <div data-th-if="${menuItem.hasChildren}" class="dropdown-menu">
+                        <a data-th-each="submenuItem : ${menuItem.children}"
+                            href="#" class="dropdown-item"
+                            data-th-href="${portal.pageUrl({'_path=' + submenuItem.path})}"
+                            data-th-text="${submenuItem.menuName} ?: ${submenuItem.displayName}"
+                            data-th-target="${submenuItem.newWindow ? '_blank' : ''}">Page title</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-<!-- Page breadcrumb and title bar -->
-<section class="title" data-th-if="${!showTitle}">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-12">
-                <h1 data-th-text="${breadcrumbTitle}"></h1>
-            </div>
-            <div class="col-sm-6 col-12">
-					<ul class="breadcrumb float-right ">
-						 <li data-th-each="item, iterStat : ${breadcrumbs.items}" data-th-class="
+    <!-- Page breadcrumb and title bar -->
+    <section class="title" data-th-if="${!showTitle}">
+        <div class="container">
+            <span class="row">
+                <div class="col-sm-6 col-12">
+                    <h1 data-th-text="${breadcrumbTitle}"></h1>
+                </div>
+                <span class="col-sm-6 col-12">
+                    <ul class="breadcrumb float-right ">
+                        <li data-th-each="item, iterStat : ${breadcrumbs.items}" data-th-class="
 							  ${item.active ? 'active' : ''} +
 							  ${iterStat.first ? ' first' : ''} +
 							  ${iterStat.last ? ' last' : ''}
 						 ">
-							 <a href="/" data-th-if="${item.url}" data-th-href="${item.url}" data-th-text="${item.text}">Home</a>
-							 <span data-th-unless="${item.url}" data-th-text="${item.text}" data-th-remove="tag">Home</span>
-							 <div data-th-remove="tag" data-th-if="${breadcrumbs.divider} and !${iterStat.last}" data-th-utext="${breadcrumbs.divider}"></div>
-						 </li>
-					</ul>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Main body -->
-<!--/* Render any components added to this region - except for Fragments. */-->
-<div data-portal-region="main" data-th-unless="${isFragment}">
-    <div data-th-each="component : ${mainRegion.components}" data-th-remove="tag">
-        <div data-portal-component="${component.path}" data-th-remove="tag"></div>
-    </div>
-</div>
-<!--/* Render Fragments (single view, supported with mappings in site.xml) */-->
-<main data-th-if="${isFragment}" data-th-remove="tag">
-	<div data-portal-component="fragment" data-th-remove="tag"/>
-</main>
-
-
-<!-- Footer level 1 -->
-<section id="bottom" class="main">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <h4 data-th-text="${footer.column1.title}"></h4>
-                <ul class="list-unstyled address">
-                    <li>
-                        <i class="icon-home"></i>
-                        <strong>Address:</strong>
-                        <span data-th-text="${footer.column1.address}" data-th-remove="tag"></span>
-                    </li>
-                    <li>
-                        <i class="icon-envelope"></i>
-                        <strong>Email:</strong>
-                        <span data-th-text="${footer.column1.email}" data-th-remove="tag"></span>
-                    </li>
-                    <li>
-                        <i class="icon-phone"></i>
-                        <strong>Phone:</strong>
-                        <span data-th-text="${footer.column1.phone}" data-th-remove="tag"></span>
-                    </li>
-                </ul>
-            </div>
-            <div id="tweets" class="col-md-3">
-                <h4 data-th-text="${footer.column2.title}"></h4>
-                <div>
-                    <ul class="arrow">
-                        <li data-th-if="items" data-th-each="item : ${footer.column2.items}">
-                            <a data-th-href="${item.url}" data-th-text="${item.name}">
-                            </a>
+                            <a href="/" data-th-if="${item.url}" data-th-href="${item.url}"
+                                data-th-text="${item.text}">Home</a><!--
+                            --><span data-th-unless="${item.url}" data-th-text="${item.text}"
+                                data-th-remove="tag">Home</span><!--
+                            --><span data-th-if="!${iterStat.last}"
+                                data-th-text="${'/'}"></span>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="col-md-6">
-                <h4 data-th-text="${footer.column3.title}"></h4>
-                <p data-th-utext="${footer.column3.freeText}"></p>
-            </div>
         </div>
-</section>
+    </section>
 
-<!-- Footer level 2 -->
-<footer id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5 cp">
-                <p data-th-utext="${footer.footerText}" data-th-remove="tag"></p>
-            </div>
-            <!--/Copyright-->
-            <div class="col-md-6">
-                <ul class="social float-right">
-                    <li data-th-if="${footer.socialUrls.facebook}"><a data-th-href="${footer.socialUrls.facebook}"><i class="icon-facebook"></i></a></li>
-                    <li data-th-if="${footer.socialUrls.twitter}"><a data-th-href="${footer.socialUrls.twitter}"><i class="icon-twitter"></i></a></li>
-                    <li data-th-if="${footer.socialUrls.pinterest}"><a data-th-href="${footer.socialUrls.pinterest}"><i class="icon-pinterest"></i></a></li>
-                    <li data-th-if="${footer.socialUrls.linkedin}"><a data-th-href="${footer.socialUrls.linkedin}"><i class="icon-linkedin"></i></a></li>
-                    <li data-th-if="${footer.socialUrls.googleplus}"><a data-th-href="${footer.socialUrls.googleplus}"><i class="icon-google-plus"></i></a></li>
-                    <li data-th-if="${footer.socialUrls.youtube}"><a data-th-href="${footer.socialUrls.youtube}"><i class="icon-youtube"></i></a></li>
-                    <li data-th-if="${footer.socialUrls.tumblr}"><a data-th-href="${footer.socialUrls.tumblr}"><i class="icon-tumblr"></i></a></li>
-                    <li data-th-if="${footer.socialUrls.instagram}"><a data-th-href="${footer.socialUrls.instagram}"><i class="icon-instagram"></i></a></li>
-                </ul>
-            </div>
-            <div class="col-md-1">
-                <a id="gototop" class="gototop float-right" href="#"><i class="icon-angle-up"></i></a>
-            </div>
-            <!--/Goto Top-->
+    <!-- Main body -->
+    <!--/* Render any components added to this region - except for Fragments. */-->
+    <div data-portal-region="main" data-th-unless="${isFragment}">
+        <div data-th-each="component : ${mainRegion.components}" data-th-remove="tag">
+            <div data-portal-component="${component.path}" data-th-remove="tag"></div>
         </div>
     </div>
-</footer>
+    <!--/* Render Fragments (single view, supported with mappings in site.xml) */-->
+    <main data-th-if="${isFragment}" data-th-remove="tag">
+        <div data-portal-component="fragment" data-th-remove="tag" />
+    </main>
 
-<script data-th-src="${portal.assetUrl({'_path=js/vendor/jquery-3.1.1.min.js'})}" src="/assets/js/vendor/jquery-3.1.1.min.js"></script>
-<script data-th-src="${portal.assetUrl({'_path=js/bootstrap.min.js'})}" src="/assets/js/bootstrap.min.js"></script>
-<script data-th-src="${portal.assetUrl({'_path=js/jquery.ba-cond.min.js'})}" src="/assets/js/jquery.ba-cond.min.js" ></script>
-<script data-th-src="${portal.assetUrl({'_path=js/jquery.slitslider.js'})}" src="/assets/js/jquery.slitslider.js" ></script>
-<script data-th-src="${portal.assetUrl({'_path=js/slider.js'})}" src="/assets/js/slider.js"></script>
-<script data-th-src="${portal.assetUrl({'_path=js/twitter-bootstrap-hover-dropdown.min.js'})}" src="/assets/js/twitter-bootstrap-hover-dropdown.min.js" ></script>
-<script data-th-src="${portal.assetUrl({'_path=js/main.js'})}" src="/assets/js/main.js" ></script>
+    <footer id="footer">
+        <section id="bottom" class="main">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h4 data-th-text="${footer.column1.title}"></h4>
+                        <ul class="list-unstyled address">
+                            <li>
+                                <i class="icon-home"></i>
+                                <strong>Adresse:</strong>
+                                <span data-th-text="${footer.column1.address}" data-th-remove="tag"></span>
+                            </li>
+                            <li>
+                                <i class="icon-envelope"></i>
+                                <strong>Epost:</strong>
+                                <span data-th-text="${footer.column1.email}" data-th-remove="tag"></span>
+                            </li>
+                            <li>
+                                <i class="icon-phone"></i>
+                                <strong>Tlf:</strong>
+                                <span data-th-text="${footer.column1.phone}" data-th-remove="tag"></span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="tweets" class="col-md-3">
+                        <h4 data-th-text="${footer.column2.title}"></h4>
+                        <div>
+                            <ul class="arrow">
+                                <li data-th-if="items" data-th-each="item : ${footer.column2.items}">
+                                    <a data-th-href="${item.url}" data-th-text="${item.name}">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 data-th-text="${footer.column3.title}"></h4>
+                        <p data-th-utext="${footer.column3.freeText}"></p>
+                    </div>
+                </div>
+        </section>
+
+        <section class="container">
+            <div class="row">
+                <div class="col-md-5 cp">
+                    <p data-th-utext="${footer.footerText}" data-th-remove="tag"></p>
+                </div>
+                <!--/Copyright-->
+                <div class="col-md-6">
+                    <ul class="social float-right">
+                        <li data-th-if="${footer.socialUrls.facebook}"><a
+                                data-th-href="${footer.socialUrls.facebook}"><i class="icon-facebook"></i></a></li>
+                        <li data-th-if="${footer.socialUrls.twitter}"><a data-th-href="${footer.socialUrls.twitter}"><i
+                                    class="icon-twitter"></i></a></li>
+                        <li data-th-if="${footer.socialUrls.pinterest}"><a
+                                data-th-href="${footer.socialUrls.pinterest}"><i class="icon-pinterest"></i></a></li>
+                        <li data-th-if="${footer.socialUrls.linkedin}"><a
+                                data-th-href="${footer.socialUrls.linkedin}"><i class="icon-linkedin"></i></a></li>
+                        <li data-th-if="${footer.socialUrls.googleplus}"><a
+                                data-th-href="${footer.socialUrls.googleplus}"><i class="icon-google-plus"></i></a></li>
+                        <li data-th-if="${footer.socialUrls.youtube}"><a data-th-href="${footer.socialUrls.youtube}"><i
+                                    class="icon-youtube"></i></a></li>
+                        <li data-th-if="${footer.socialUrls.tumblr}"><a data-th-href="${footer.socialUrls.tumblr}"><i
+                                    class="icon-tumblr"></i></a></li>
+                        <li data-th-if="${footer.socialUrls.instagram}"><a
+                                data-th-href="${footer.socialUrls.instagram}"><i class="icon-instagram"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-1">
+                    <a id="gototop" class="gototop float-right" href="#"><i class="icon-angle-up"></i></a>
+                </div>
+                <!--/Goto Top-->
+            </div>
+        </section>
+    </footer>
+
+    <script data-th-src="${portal.assetUrl({'_path=js/vendor/jquery-3.1.1.min.js'})}"
+        src="/assets/js/vendor/jquery-3.1.1.min.js"></script>
+    <script data-th-src="${portal.assetUrl({'_path=js/bootstrap.min.js'})}" src="/assets/js/bootstrap.min.js"></script>
+    <script data-th-src="${portal.assetUrl({'_path=js/jquery.ba-cond.min.js'})}"
+        src="/assets/js/jquery.ba-cond.min.js"></script>
+    <script data-th-src="${portal.assetUrl({'_path=js/jquery.slitslider.js'})}"
+        src="/assets/js/jquery.slitslider.js"></script>
+    <script data-th-src="${portal.assetUrl({'_path=js/slider.js'})}" src="/assets/js/slider.js"></script>
+    <script data-th-src="${portal.assetUrl({'_path=js/twitter-bootstrap-hover-dropdown.min.js'})}"
+        src="/assets/js/twitter-bootstrap-hover-dropdown.min.js"></script>
+    <script data-th-src="${portal.assetUrl({'_path=js/main.js'})}" src="/assets/js/main.js"></script>
 </body>
+
 </html>
