--- a/src/main/resources/site/parts/contact/contact.html
+++ b/src/main/resources/site/parts/contact/contact.html
@@ -1,7 +1,7 @@
 <div>
     <section class="no-margin">
-        <iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-            src="https://maps.google.com.au/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Oslo,+Oslo+Division,+Bangladesh&amp;aq=0&amp;oq=oslo+ban&amp;sll=40.714353,-74.005973&amp;sspn=0.836898,1.815491&amp;ie=UTF8&amp;hq=&amp;hnear=Oslo+Division,+Norway&amp;t=m&amp;ll=24.542126,90.293884&amp;spn=0.124922,0.411301&amp;z=8&amp;output=embed"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4039.005855360033!2d10.805998842865215!3d59.912984169837245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416fa933ee82d1%3A0xf37395e6cbf3d104!2sBrynsveien%2018%2C%200667%20Oslo!5e0!3m2!1sen!2sno!4v1578311661476!5m2!1sen!2sno" 
+        width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </section>
     <section class="container">
         <div class="row">
