--- a/src/main/resources/site/parts/portfolio/portfolio.html
+++ b/src/main/resources/site/parts/portfolio/portfolio.html
@@ -3,17 +3,17 @@
         <li class="col-sm-3 col-6" data-th-if="${portfolioList}" data-th-each="item : ${portfolioList}">
             <div class="preview">
                 <img data-th-if="${item.image}" data-th-src="${item.image}" alt="" />
-                <div class="overlay"></div>
-                <div class="links">
+                <!-- <div class="overlay"></div> -->
+                <!-- <div class="links">
                     <a data-toggle="modal" href="#modal-1" data-th-if="${item.imageFull}" data-th-href="${'#' + item.uniqueId}"><i class="icon-eye-open"></i></a><a data-th-href="${item.url}" data-th-if="${item.url}"><i class="icon-link"></i></a>
-                </div>
+                </div> -->
             </div>
             <div class="desc">
                 <h3 data-th-text="${item.title}"></h3>
-                <h5 data-th-text="${item.intro}"></h5>
+                <h5 data-th-utext="${item.intro}"></h5>
             </div>
 
-            <div id="modal-1" data-th-id="${item.uniqueId}" data-th-if="${item.imageFull}" class="modal fade">
+            <!-- <div id="modal-1" data-th-id="${item.uniqueId}" data-th-if="${item.imageFull}" class="modal fade">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-body">
@@ -22,7 +22,7 @@
                     <a class="close" href="#" data-dismiss="modal" aria-hidden="true"><i class="modal-close icon-remove"></i></a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </li>
     </ul>
 </section>
