Tweaks to the UI, porfolio change

--- a/src/main/resources/site/pages/default/default.html
+++ b/src/main/resources/site/pages/default/default.html
@@ -28,7 +28,7 @@
                     <img data-th-src="${logo}" alt="" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#corporate-collapsed-menu" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -38,7 +38,7 @@
         <nav class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/" data-th-href="${siteUrl}">Home</a>
+                    <a class="nav-link" href="/" data-th-href="${siteUrl}">Hjem</a>
                 </li>
                 <li data-th-each="menuItem : ${menuItems}"
                     data-th-class="${'nav-item' +
