--- a/src/main/resources/site/parts/banner-frontpage/banner-frontpage.html
+++ b/src/main/resources/site/parts/banner-frontpage/banner-frontpage.html
@@ -20,13 +20,16 @@
                 centerMode: true,
                 centerPadding: "60px",
                 slidesToShow: 1,
+                variableWidth: true,
+                adaptiveHeight: true,
                 responsive: [
                     {
-                        breakPoint: 768,
+                        breakPoint: 1024,
                         settings: {
                             centerMode: true,
-                            centerPadding: "40px",
-                            slidesToShow: 1
+                            slidesToShow: 1,
+                            variableWidth: true,
+                            adaptiveHeight: true,
                         }
                     }
                 ]
